--- a/libsyntax/Makefile
+++ b/libsyntax/Makefile
@@ -23,6 +23,10 @@ check:
 	ar -rv ./syntax.a ./*.o
 	ar -rv ./syntax.so ./*.o
 
+# Format Package
+format:
+	clang-format -i ./src/*.c ./src/*.h
+
 # Clean Package
 clean:
 	rm ./build/**
