--- a/libsyntax/Makefile
+++ b/libsyntax/Makefile
@@ -4,7 +4,7 @@
 CFLAGS = -Wall -Wextra
 
 # C Compiler Memory Safety Analysis Flags
-ANALYSISFLAGS = -Wall -Wextra -fsanitize=memory -fsanitize=thread
+ANALYSISFLAGS = -Wall -Wextra -fsanitize=memory
 
 # Build All
 all: build
@@ -12,20 +12,20 @@ all: build
 # Build Package
 build:
 	cd ./build
-	clang $(CFLAGS) -c ../src/*.c -include ../src/*.h
+	clang++ $(CFLAGS) -c ../src/*.cc -include ../src/*.hh
 	ar -rv ./syntax.a ./*.o
 	ar -rv ./syntax.so ./*.o
 
 # Check Package
 check:
 	cd ./build
-	clang $(ANALYSISFLAGS) -c ../src/*.c -include ../src/*.h
+	clang++ $(ANALYSISFLAGS) -c ../src/*.cc -include ../src/*.hh
 	ar -rv ./syntax.a ./*.o
 	ar -rv ./syntax.so ./*.o
 
 # Format Package
 format:
-	clang-format -i ./src/*.c ./src/*.h
+	clang-format -i ./src/*.cc ./src/*.hh
 
 # Clean Package
 clean:
