--- a/ada-tokens/Makefile
+++ b/ada-tokens/Makefile
@@ -10,14 +10,19 @@ all: build
 # Compile Package
 build: ./src/*.adb ./src/*.ads
 	cd ./build
-	gnat compile $(CFLAGS) ../src/*.adb ../src/*.ads
+	gnat make $(CFLAGS) ../src/*.adb ../src/*.ads
 	ar -rcs tokens.a ./*.o
 	ar -rcs tokens.so ./*.o
 
 # Check Package
 check: ./src/*.adb ./src/*.ads
 	cd ./build
-	gnat compile $(ANALYSIS_FLAGS) ../src/*.adb ../src/*.ads
+	gnat make $(ANALYSIS_FLAGS) ../src/*.adb ../src/*.ads
 	ar -rcs tokens.a ./*.o
 	ar -rcs tokens.so ./*.o
+
+# Clean Package
+clean:
+	cd ./build
+	rm ./*
 
